namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-system-2
