cluster-operator-gateway-protected.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: gateway-system
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: ingress-gateway-cert
            kind: Secret
      hostname: "*.io"
      allowedRoutes:
        namespaces:
          from: All
